Refactored mockito with annotation and added more tests